# medical_pretrain

./: .gitignore  README.md  medical_pretrain.pptx  pyproject.toml
scripts/: pretrain.py
src/abnormal_detection_pretrain/: data_preprocess.py  models.py  pretrain_utils.py
